force-app/main/default/objects/Highlight_Badge_Action__c/Highlight_Badge_Action__c.object-meta.xml
<CustomObject>
    <description>A customizable action associated with a Highlight Badge that allows for user interaction and automated tasks</description>
    <label>Highlight Badge Action</label>
    <nameField>
        <label>Highlight Badge Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Highlight Badge Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>