force-app/main/default/objects/Highlight_Badge_Action__c/fields/Highlight_Badge_Definition__c.field-meta.xml
<CustomField>
    <fullName>Highlight_Badge_Definition__c</fullName>
    <label>Highlight Badge Definition</label>
    <referenceTo>Highlight_Badge_Definition__c</referenceTo>
    <relationshipLabel>Highlight Badge Actions</relationshipLabel>
    <relationshipName>Highlight_Badge_Actions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>