force-app/main/default/objects/Highlight_Badge_Action__c/fields/Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>Icon_Name__c</fullName>
    <description>Use icon names from the SLDS library (e.g. standard:actions_and_buttons)</description>
    <inlineHelpText>Use icon names from the SLDS library (e.g. standard:actions_and_buttons)</inlineHelpText>
    <label>Icon Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>