force-app/main/default/objects/Highlight_Badge_Action__c/fields/Icon_Position__c.field-meta.xml
<CustomField>
    <fullName>Icon_Position__c</fullName>
    <label>Icon Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Left</fullName>
                <default>true</default>
                <label>Left</label>
            </value>
            <value>
                <fullName>Right</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>