force-app/main/default/objects/Highlight_Badge_Action__c/fields/Include_Display_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Include_Display_Record_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the Record ID of the current Display Object record the user is viewing will be provided to the displayRecordId input variable.</description>
    <inlineHelpText>If checked, the Record ID of the current Display Object record the user is viewing will be provided to the displayRecordId input variable.</inlineHelpText>
    <label>Include Display Record ID</label>
    <type>Checkbox</type>
</CustomField>