force-app/main/default/objects/Highlight_Badge_Action__c/fields/Include_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Include_Record_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the Record ID of the current Display Object record the user is viewing will be provided to the recordId input variable.</description>
    <inlineHelpText>If checked, the Record ID of the current Display Object record the user is viewing will be provided to the recordId input variable.</inlineHelpText>
    <label>Include Record ID</label>
    <type>Checkbox</type>
</CustomField>