force-app/main/default/objects/Highlight_Badge_Action__c/fields/Include_Source_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Include_Source_Record_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the Record ID of the badge&apos;s source record will be provided to the sourceRecordId input variable.</description>
    <inlineHelpText>If checked, the Record ID of the badge&apos;s source record will be provided to the sourceRecordId input variable.</inlineHelpText>
    <label>Include Source Record ID</label>
    <type>Checkbox</type>
</CustomField>