force-app/main/default/objects/Highlight_Badge_Action__c/fields/Navigation_Type__c.field-meta.xml
<CustomField>
    <fullName>Navigation_Type__c</fullName>
    <label>Navigation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Knowledge Article</fullName>
            </value>
            <value>
                <fullName>Source Record</fullName>
            </value>
            <value>
                <fullName>Web Page</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>