force-app/main/default/objects/Highlight_Badge_Action__c/fields/Open_in_New_Tab__c.field-meta.xml
<CustomField>
    <fullName>Open_in_New_Tab__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Web Page navigation type actions, indicates whether the destination should be opened in a new tab</description>
    <inlineHelpText>For Web Page navigation type actions, indicates whether the destination should be opened in a new tab</inlineHelpText>
    <label>Open in New Tab</label>
    <type>Checkbox</type>
</CustomField>