force-app/main/default/objects/Highlight_Badge_Action__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Determines the order in which the action appears for its highlight badge. Lowest numbers appear first; null values appear last.</description>
    <inlineHelpText>Determines the order in which the action appears for its highlight badge. Lowest numbers appear first; null values appear last.</inlineHelpText>
    <label>Sort Order</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>