force-app/main/default/objects/Highlight_Badge_Action__c/fields/Variant__c.field-meta.xml
<CustomField>
    <fullName>Variant__c</fullName>
    <label>Variant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>base</fullName>
            </value>
            <value>
                <fullName>neutral</fullName>
            </value>
            <value>
                <fullName>brand</fullName>
            </value>
            <value>
                <fullName>brand-outline</fullName>
            </value>
            <value>
                <fullName>destructive</fullName>
            </value>
            <value>
                <fullName>destructive-text</fullName>
            </value>
            <value>
                <fullName>inverse</fullName>
            </value>
            <value>
                <fullName>success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>