force-app/main/default/objects/Highlight_Badge_Action__c/recordTypes/Flow.recordType-meta.xml
<RecordType>
    <fullName>Flow</fullName>
    <active>true</active>
    <description>Launch a flow</description>
    <label>Flow</label>
</RecordType>