force-app/main/default/objects/Highlight_Badge_Action__c/recordTypes/Navigation.recordType-meta.xml
<RecordType>
    <fullName>Navigation</fullName>
    <active>true</active>
    <description>Navigation to an internal or external URL</description>
    <label>Navigation</label>
</RecordType>